-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 4
-
None
-
-
a94a3098d0cc82a850d2d0c62baad6edef72e142 (qt/qtbase/5.12)
Run configure with -no-feature-tabletevent and the build will fail with compiler errors like the following
...
qwindowsdropdataobject.cpp jom: K:\qt-build-env\external\Qt5\src\qtbase\src\plugins\platforms\windows\Makefile.Debug [.obj\debug\qwindowspointerhandler.obj] Error 2 qwindowspointerhandler.cpp(645): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(645): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int qwindowspointerhandler.cpp(645): error C2146: syntax error: missing ';' before identifier 'device' qwindowspointerhandler.cpp(645): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(645): error C2065: 'Stylus': undeclared identifier qwindowspointerhandler.cpp(646): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(646): error C2065: 'PointerType': undeclared identifier qwindowspointerhandler.cpp(646): error C2146: syntax error: missing ';' before identifier 'type' qwindowspointerhandler.cpp(646): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(654): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(654): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(654): error C2065: 'Eraser': undeclared identifier qwindowspointerhandler.cpp(656): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(656): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(656): error C2065: 'Pen': undeclared identifier qwindowspointerhandler.cpp(663): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(663): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(676): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(676): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(699): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(699): error C2065: 'type': undeclared identifier
...
qwindowspointerhandler.cpp(645): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(645): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int qwindowspointerhandler.cpp(645): error C2146: syntax error: missing ';' before identifier 'device' qwindowspointerhandler.cpp(645): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(645): error C2065: 'Stylus': undeclared identifier qwindowspointerhandler.cpp(646): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(646): error C2065: 'PointerType': undeclared identifier qwindowspointerhandler.cpp(646): error C2146: syntax error: missing ';' before identifier 'type' qwindowspointerhandler.cpp(646): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(654): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(654): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(654): error C2065: 'Eraser': undeclared identifier qwindowspointerhandler.cpp(656): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(656): error C2653: 'QTabletEvent': is not a class or namespace name qwindowspointerhandler.cpp(656): error C2065: 'Pen': undeclared identifier qwindowspointerhandler.cpp(663): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(663): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(676): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(676): error C2065: 'type': undeclared identifier qwindowspointerhandler.cpp(699): error C2065: 'device': undeclared identifier qwindowspointerhandler.cpp(699): error C2065: 'type': undeclared identifier
...
qwindowsdropdataobject.cpp ..\windows\qwindowspointerhandler.cpp(645): error C2653: 'QTabletEvent': is not a class or namespace name ..\windows\qwindowspointerhandler.cpp(645): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int ..\windows\qwindowspointerhandler.cpp(645): error C2146: syntax error: missing ';' before identifier 'device' ..\windows\qwindowspointerhandler.cpp(645): error C2065: 'device': undeclared identifier ..\windows\qwindowspointerhandler.cpp(645): error C2065: 'Stylus': undeclared identifier ..\windows\qwindowspointerhandler.cpp(646): error C2653: 'QTabletEvent': is not a class or namespace name ..\windows\qwindowspointerhandler.cpp(646): error C2065: 'PointerType': undeclared identifier ..\windows\qwindowspointerhandler.cpp(646): error C2146: syntax error: missing ';' before identifier 'type' ..\windows\qwindowspointerhandler.cpp(646): error C2065: 'type': undeclared identifier ..\windows\qwindowspointerhandler.cpp(654): error C2065: 'type': undeclared identifier ..\windows\qwindowspointerhandler.cpp(654): error C2653: 'QTabletEvent': is not a class or namespace name ..\windows\qwindowspointerhandler.cpp(654): error C2065: 'Eraser': undeclared identifier ..\windows\qwindowspointerhandler.cpp(656): error C2065: 'type': undeclared identifier ..\windows\qwindowspointerhandler.cpp(656): error C2653: 'QTabletEvent': is not a class or namespace name ..\windows\qwindowspointerhandler.cpp(656): error C2065: 'Pen': undeclared identifierjom: K:\qt-build-env\external\Qt5\src\qtbase\src\plugins\platforms\direct2d\Makefile.Debug [.obj\debug\qwindowspointerhandler.obj] Error 2..\windows\qwindowspointerhandler.cpp(663): error C2065: 'device': undeclared identifier ..\windows\qwindowspointerhandler.cpp(663): error C2065: 'type': undeclared identifier ..\windows\qwindowspointerhandler.cpp(676): error C2065: 'device': undeclared identifier ..\windows\qwindowspointerhandler.cpp(676): error C2065: 'type': undeclared identifier ..\windows\qwindowspointerhandler.cpp(699): error C2065: 'device': undeclared identifier ..\windows\qwindowspointerhandler.cpp(699): error C2065: 'type': undeclared identifier
...
Please fix as before 5.12.0 release.
We have been disabling tablet events for several years now because our WACOM support as always causes our an inconsistent user experience. We disable tablet events so the WACOM drivers generate equivalent mouse events.
- is duplicated by
-
QTBUG-72835 Can't build Qt 5.12 with -no-feature-tabletevent on windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-71774 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245527,2 | Windows QPA: Fix building with -no-feature-tabletevent | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |